26-03-2025 practice from v till 1pm

--- a/PythonPractice_github/thirdweek24032025_28032025.ipynb
+++ b/PythonPractice_github/thirdweek24032025_28032025.ipynb
@@ -753,9 +753,155 @@
    "outputs": [],
    "source": [
     "#26-03-2025\n",
-    "# \n",
-    "# \n",
+    "# user defined exception\n",
+    "# class\n",
     "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "59d99118-9d61-47e6-bce7-2f63ccd48357",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter the first val: 5\n",
+      "enter the second val: 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#user defined exception\n",
+    "\n",
+    "class Bigvalue(Exception):\n",
+    "    def __init__(self):\n",
+    "        self.warning = f\"given second value {b}  is big than first value\"\n",
+    "\n",
+    "try:\n",
+    "    a = eval(input(\"enter the first val:\"))\n",
+    "    b= eval(input(\"enter the second val:\"))\n",
+    "\n",
+    "    if type(a) == int and type(b) == int and a >= b:\n",
+    "        print(a/b)\n",
+    "    elif b > a:\n",
+    "        raise Bigvalue\n",
+    "except ZeroDivisionError:\n",
+    "    print(f\"the error occured because value is {a}/{b}\")\n",
+    "except TypeError:\n",
+    "    print(f\"the type of first values is {type(a)} and second value is {type(b)}\")\n",
+    "except Bigvalue as e:\n",
+    "    print (e.warning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d3b6d966-1aae-4359-81d5-d93eac6920c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the first value:  3\n",
+      "Enter the second value:  15\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Given second value 15 is bigger than first value 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# user-defined exception\n",
+    "\n",
+    "class Bigvalue(Exception):\n",
+    "    def __init__(self, a, b):\n",
+    "        self.warning = f\"Given second value {b} is bigger than first value {a}\"\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return self.warning\n",
+    "\n",
+    "\n",
+    "class Smallvalue(Exception):\n",
+    "    def __init__(self, a, b):\n",
+    "        self.warning = f\"Given first value {a} is smaller than second value {b}\"\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return self.warning\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    a = eval(input(\"Enter the first value: \"))\n",
+    "    b = eval(input(\"Enter the second value: \"))\n",
+    "\n",
+    "    if type(a) == int and type(b) == int:\n",
+    "        if a >= b:\n",
+    "            print(a / b)\n",
+    "        elif b > a:\n",
+    "            raise Bigvalue(a, b)\n",
+    "        elif a < b:\n",
+    "            raise Smallvalue(a, b)\n",
+    "    else:\n",
+    "        raise TypeError(\"Both values should be integers.\")\n",
+    "\n",
+    "except ZeroDivisionError:\n",
+    "    print(f\"The error occurred because the second value is {b}, and division by zero is not allowed.\")\n",
+    "except TypeError as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "except Bigvalue as e:\n",
+    "    print(e)\n",
+    "except Smallvalue as e:\n",
+    "    print(e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "98423743-9877-4536-8440-16dd43d21dc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n",
+      "8\n",
+      "4\n",
+      "20\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#class\n",
+    "\n",
+    "class test:\n",
+    "    print(\"hello world\")\n",
+    "    x = 8\n",
+    "    y = 4\n",
+    "    def add(self, z):\n",
+    "        self.z = z\n",
+    "        return self.x +  self.y + z\n",
+    "\n",
+    "obj = test()\n",
+    "print(obj.x)\n",
+    "print(obj.y)\n",
+    "print(obj.add(8))\n",
+    "print(obj.z)"
    ]
   }
  ],
