27-03-2025 practice on classes from 8 am - 9 am

--- a/PythonPractice_github/thirdweek24032025_28032025.ipynb
+++ b/PythonPractice_github/thirdweek24032025_28032025.ipynb
@@ -754,8 +754,7 @@
    "source": [
     "#26-03-2025\n",
     "# user defined exception\n",
-    "# class\n",
-    "# "
+    "# class\n"
    ]
   },
   {
@@ -902,6 +901,245 @@
     "print(obj.y)\n",
     "print(obj.add(8))\n",
     "print(obj.z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2d1da8c-5c66-4df5-9bec-9869b8f8f007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#27/03/2025\n",
+    "# class continuation\n",
+    "# static method - class\n",
+    "# class method - class\n",
+    "# outer and inner class\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8743ae3c-8aeb-47f8-953f-39c8257c9b01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Test:\n",
+    "    def __init__(self, p1,p2):\n",
+    "        self.x = p1\n",
+    "        self.y = p2\n",
+    "    def add(self):\n",
+    "        return self.x + self.y\n",
+    "\n",
+    "obj = Test(2,3)\n",
+    "obj.add()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "134279bb-6515-4a3d-97c5-5b4bc019bbb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Test:\n",
+    "    def __init__(self, p1,p2):\n",
+    "        self.x = p1\n",
+    "        self.y = p2\n",
+    "    def add(self):\n",
+    "        return self.x + self.y\n",
+    "\n",
+    "obj = Test(2,3)\n",
+    "print(obj.add())\n",
+    "print(obj.x)\n",
+    "print(obj.y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "697b6855-33a3-4cc6-891c-207321eee702",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "2\n",
+      "3\n",
+      "hello world\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "45"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Test:\n",
+    "    a = 45\n",
+    "    def __init__(self, p1,p2):\n",
+    "        self.x = p1\n",
+    "        self.y = p2\n",
+    "    def add(self):\n",
+    "        return self.x + self.y\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def hello():\n",
+    "        return \"hello world\"\n",
+    "\n",
+    "    @classmethod\n",
+    "    def world(cls):\n",
+    "        return cls.a\n",
+    "\n",
+    "    \n",
+    "obj = Test(2,3)\n",
+    "print(obj.add())\n",
+    "print(obj.x)\n",
+    "print(obj.y)\n",
+    "print(obj.hello())\n",
+    "obj.world()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6894075b-c768-4361-8874-bf1e0677160c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "2\n",
+      "7\n",
+      "10\n",
+      "4\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Test:\n",
+    "    a = 45\n",
+    "    def __init__(self, p1,p2):\n",
+    "        self.x = p1\n",
+    "        self.y = p2\n",
+    "    def add(self):\n",
+    "        return self.x + self.y\n",
+    "\n",
+    "obj = Test(5,2)\n",
+    "print(obj.x)\n",
+    "print(obj.y)\n",
+    "print(obj.add())\n",
+    "\n",
+    "obj.x = 10\n",
+    "obj.y = 4\n",
+    "print(obj.x)\n",
+    "print(obj.y)\n",
+    "print(obj.add())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "2dc3e242-e1b1-4a5b-86de-f501b32fbef7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Senthil Kumar.B\n",
+      "Chennai, Tamil Nadu\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Test:\n",
+    "    a = 45\n",
+    "    def __init__(self, name,city):\n",
+    "        self.name = name\n",
+    "        self.city = city\n",
+    "    def fullname(self, lastname):\n",
+    "        self.name = self.name + lastname\n",
+    "        return self.name\n",
+    "\n",
+    "    def address(self, state):\n",
+    "        self.city = self.city + state\n",
+    "        return self.city\n",
+    "\n",
+    "obj = Test(\"Senthil\", \"Chennai,\")\n",
+    "print(obj.fullname(\" Kumar.B\"))\n",
+    "print(obj.address(\" Tamil Nadu\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "20dbc146-a87b-41d6-9af8-78ab3fd8c837",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outer class instance method\n",
+      "5\n",
+      "inner class instance method\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class outer:\n",
+    "    def __init__(self, p1):\n",
+    "        self.x = p1\n",
+    "    def add(self):\n",
+    "        print(\"outer class instance method\")\n",
+    "        return self.x\n",
+    "   \n",
+    "    class inner:\n",
+    "        def __init__(self, p1):\n",
+    "            self.x = p1\n",
+    "        def show(self):\n",
+    "            print(\"inner class instance method\")\n",
+    "            return self.x\n",
+    "\n",
+    "outerobj = outer(5)\n",
+    "print(outerobj.add())\n",
+    "\n",
+    "innerobj = outerobj.inner(2)\n",
+    "print(innerobj.show())"
    ]
   }
  ],
