--- a/PythonPractice_github/thirdweek24032025_28032025.ipynb
+++ b/PythonPractice_github/thirdweek24032025_28032025.ipynb
@@ -1141,6 +1141,195 @@
     "innerobj = outerobj.inner(67)\n",
     "print(innerobj.show())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c56ae62-39fd-4601-a218-079540fdd370",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#28-03-2025\n",
+    "#class continuation\n",
+    "#inheritance\n",
+    "#super() method\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "00e9fbce-8b59-4b24-83ae-cc78544c3b5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outer class instance method\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self, p1):\n",
+    "        self.x = p1\n",
+    "    def add(self):\n",
+    "        print(\"outer class instance method\")\n",
+    "        return self.x\n",
+    "\n",
+    "class B(A):\n",
+    "    pass\n",
+    "\n",
+    "obj = B(3)\n",
+    "obj.add()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "908ad8dd-0a47-427c-a011-11963276f05c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9, -3, 18)\n",
+      "3\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self, p1):\n",
+    "        self.x = p1\n",
+    "\n",
+    "    def add(self):\n",
+    "        print(\"super class A\")\n",
+    "        return self.x\n",
+    "\n",
+    "class B:\n",
+    "    def __init__(self, p2):\n",
+    "        self.y = p2\n",
+    "\n",
+    "    def add(self):\n",
+    "        print(\"super class B\")\n",
+    "        return self.y\n",
+    "\n",
+    "class C(A, B):\n",
+    "    def __init__(self, p1, p2):\n",
+    "        A.__init__(self, p1)  \n",
+    "        B.__init__(self, p2)  \n",
+    "\n",
+    "    def math(self):\n",
+    "        return self.x + self.y, self.x - self.y, self.x * self.y\n",
+    "\n",
+    "obj = C(3, 6)\n",
+    "print(obj.math())\n",
+    "print(obj.x)\n",
+    "print(obj.y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "911fe80f-4e5b-4a13-9639-fbe98f9573cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "super class A\n",
+      "6\n",
+      "super class B\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self, p1, p2):\n",
+    "        self.x = p1\n",
+    "        self.y = p2\n",
+    "\n",
+    "    def add(self):\n",
+    "        print(\"super class A\")\n",
+    "        return self.x + self.y\n",
+    "\n",
+    "class B(A):\n",
+    "    def sub(self):\n",
+    "        print(\"super class B\")\n",
+    "        return self.x - self.y\n",
+    "\n",
+    "class C(B):\n",
+    "    def math(self):\n",
+    "        print(super().add())\n",
+    "        print(super().sub())\n",
+    "\n",
+    "obj = C(4,2)\n",
+    "obj.math()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "beb25886-19bd-43a9-b30e-811541658dea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "super class A\n",
+      "6\n",
+      "super class B\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self, p1, p2):\n",
+    "        self.x = p1\n",
+    "        self.y = p2\n",
+    "\n",
+    "    def add(self):\n",
+    "        print(\"super class A\")\n",
+    "        return self.x + self.y\n",
+    "\n",
+    "class B(A):\n",
+    "    def sub(self):\n",
+    "        print(\"super class B\")\n",
+    "        return self.x - self.y\n",
+    "\n",
+    "class C(B):\n",
+    "    def math(self):\n",
+    "        print(A.add(self))\n",
+    "        print(B.sub(self))\n",
+    "\n",
+    "obj = C(4,2)\n",
+    "obj.math()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1d72214-ee75-4411-8dd8-7022471fbd53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
