--- a/PythonPractice_github/fourthweek31032025_04042025.ipynb
+++ b/PythonPractice_github/fourthweek31032025_04042025.ipynb
@@ -249,6 +249,654 @@
     "print(obj.add(4,2))\n",
     "print(obj.add(4))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "856d0e9c-4ca6-4316-a32e-dd6701f739f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#01-04-2025\n",
+    "#duck typing\n",
+    "#next(),iter()\n",
+    "#generators\n",
+    "#any() & all()\n",
+    "#collections :namedtuple,ordereddictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "68fb1f17-0e84-4f39-971a-be0e6096f6d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "duck have 2 legs\n",
+      "tiger have 4 legs\n",
+      "fish has no legs\n",
+      "spider has 8 legs\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Duck:\n",
+    "    def legs(self):\n",
+    "        print(\"duck have 2 legs\")\n",
+    "\n",
+    "class Tiger:\n",
+    "    def legs(self):\n",
+    "        print(\"tiger have 4 legs\")\n",
+    "\n",
+    "class Spider:\n",
+    "    def legs(self):\n",
+    "        print(\"spider has 8 legs\")\n",
+    "\n",
+    "class Fish:\n",
+    "    def legs(self):\n",
+    "        print(\"fish has no legs\")\n",
+    "\n",
+    "\n",
+    "for obj in (Duck(), Tiger(), Fish(), Spider()):\n",
+    "    obj.legs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4b102f53-3745-41c4-ad6f-4a4c4f9cac85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'h'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#inbuilt function to access elements one after the other\n",
+    "a = \"hello\"\n",
+    "a = iter(a)\n",
+    "next(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e0447866-40fa-48b2-8396-fb8aa0b58cb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1e1aad0d-2b64-4981-afa1-fa0a2b7ab989",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'l'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5e6d646c-e9ec-46f6-be08-770a985230fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 = [1,2,3]\n",
+    "l1 = iter(l1)\n",
+    "next(l1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1203ba87-9314-49e9-a0de-0dcbda8f64d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(l1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c311a9e4-f151-475b-b13c-902e033c123d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(l1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "358d1d8a-6400-45eb-9f01-deb0d350d364",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "#generators \n",
+    "\n",
+    "def fun():\n",
+    "    yield 4\n",
+    "    yield 5\n",
+    "    yield 11\n",
+    "\n",
+    "for value in fun():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15d4fdcb-15f4-4b20-8202-40882a8733fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# yield is used to create a generator, which allows you to return multiple values lazily.\n",
+    "# return is used to return a single value, and when it’s used, the function execution terminates immediately.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "124d71fe-4f21-4ed3-a56e-57cc523dad57",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[32m5\u001b[39m\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[32m11\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mfun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    return 4\n",
+    "    return 5\n",
+    "    return 11\n",
+    "\n",
+    "for value in fun():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "341c3024-7e28-4b9b-83e0-f367786c7083",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    return [4, 5, 11]\n",
+    "\n",
+    "for value in fun():\n",
+    "    print(value) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1bd4ca11-cc80-417a-9ed5-dede312d7848",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    return iter([4, 5, 11]) \n",
+    "\n",
+    "for value in fun():\n",
+    "    print(value) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "204b233c-131d-47bd-ae15-cea069cdf032",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    numbers = [4, 5, 11]\n",
+    "    return numbers \n",
+    "for i in fun():\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "05d4af1e-dbee-4f6f-bff2-ced5800051f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    numbers = [4, 5, 11]\n",
+    "    for num in numbers:\n",
+    "        yield num \n",
+    "\n",
+    "for value in fun():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25da2cb2-5209-4fbb-8cf0-4f98c61fa797",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# any(): Use when you want to check if at least one condition is true in an iterable.\n",
+    "# all(): Use when you want to check if every condition is true in an iterable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "216372a3-1fb5-42f2-b2bd-a6e45c67b5bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#any()\n",
+    "\n",
+    "any([6,12,0,56,\"\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "32a61e3c-3491-4da6-a781-12b0931f47c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "any([0,0,0,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a05d2d39-c43e-486b-98e3-b189829ef965",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#all()\n",
+    "all([6,12,0,56,\"\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a80ddb97-cca8-48fa-a7c4-114f22ac7a06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all([21,23,45])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2175e598-ef58-422f-9c2f-382a80a274f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#collections\n",
+    "\n",
+    "# namedtuple: Immutable objects with named fields (like a lightweight class).\n",
+    "# OrderedDict: Dictionary that preserves the insertion order.\n",
+    "# defaultdict: Dictionary with a default value for missing keys.\n",
+    "# deque: Efficient double-ended queue for fast appends and pops.\n",
+    "# Counter: For counting hashable objects and their frequencies.\n",
+    "# ChainMap: Combines multiple dictionaries into one view without merging them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "5427bd43-a373-4bc5-a89a-840cf846b18e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple = (1,2,3,5,6)\n",
+    "tuple[0]\n",
+    "tuple[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "79b2e714-48bf-4bd0-bbd9-2108827673d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "#collections\n",
+    "\n",
+    "import collections as c\n",
+    "\n",
+    "s1 = c.namedtuple(\"s1\", [\"v1\",\"v2\",\"v3\",\"v4\"])\n",
+    "s2 = s1(4,12,90,\"hello\")\n",
+    "print(s2[2])\n",
+    "print(s2.v3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5e3a0a3e-8538-4eb3-b714-1f6467a040db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('apple', 23), ('orange', 34), ('banana', 89)])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "od = c.OrderedDict({\"apple\":23,\"orange\":34,\"banana\":89})\n",
+    "\n",
+    "od"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b8b64eeb-f413-4f59-86e1-05e9e6d84847",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'collections.OrderedDict' object has no attribute 'apple'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[39]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mod\u001b[49m\u001b[43m.\u001b[49m\u001b[43mapple\u001b[49m\n",
+      "\u001b[31mAttributeError\u001b[39m: 'collections.OrderedDict' object has no attribute 'apple'"
+     ]
+    }
+   ],
+   "source": [
+    "od.apple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1624d23f-9109-460b-94ef-023245ee96f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections as c\n",
+    "\n",
+    "od = c.OrderedDict({\"apple\": 23, \"orange\": 34, \"banana\": 89})\n",
+    "\n",
+    "print(od[\"apple\"])  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "b7a41c02-8c6d-4634-b17d-a9117acb105a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from types import SimpleNamespace\n",
+    "\n",
+    "od = SimpleNamespace(**{\"apple\": 23, \"orange\": 34, \"banana\": 89})\n",
+    "\n",
+    "od.apple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "0dd620e0-51c0-41d9-b745-a1bb5fc6ff03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "od.pop(\"apple\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a61d3f66-0a73-45bf-82e6-c58a3c2c7241",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('orange', 34), ('banana', 89)])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "od"
+   ]
   }
  ],
  "metadata": {
