--- a/PythonPractice_github/fourthweek31032025_04042025.ipynb
+++ b/PythonPractice_github/fourthweek31032025_04042025.ipynb
@@ -897,6 +897,288 @@
    "source": [
     "od"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8800462f-9ac7-49a9-bc10-2b9b300e8ba3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#02-04-2025\n",
+    "# collections: default dict,\n",
+    "# counter,\n",
+    "# deque,\n",
+    "# chainmap\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a4b05c1e-c18c-48c1-b7a5-3ea8d9690cb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "67\n",
+      "350\n",
+      "350\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections as c\n",
+    "\n",
+    "d1 = c.defaultdict(lambda: 350)\n",
+    "\n",
+    "d1[\"apple\"] = 67\n",
+    "d1[\"orange\"] = 90\n",
+    "d1[\"banana\"] = 45\n",
+    "\n",
+    "print(d1[\"apple\"])\n",
+    "print(d1[\"berry\"])\n",
+    "print(d1[\"cherry\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "53773449-7075-46c9-b0a4-ac1c12f212e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({1: 4, 2: 4, 3: 4, 4: 3, 5: 3, 6: 2})"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#counter\n",
+    "a = [1,1,2,2,3,4,2,3,1,4,5,5,4,3,2,1,5,6,3,6]\n",
+    "c.Counter(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "22427917-44cc-468e-b4e5-02a227c38c1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value : count\n",
+      "   1  :   4\n",
+      "   2  :   4\n",
+      "   3  :   4\n",
+      "   4  :   3\n",
+      "   5  :   3\n",
+      "   6  :   2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "a = [1,1,2,2,3,4,2,3,1,4,5,5,4,3,2,1,5,6,3,6]\n",
+    "counter = c.Counter(a)\n",
+    "print(\"value : count\")\n",
+    "for i, j in counter.items(): \n",
+    "    print(f\"   {i}  :   {j}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "adb5e07b-ba6a-4621-ad9c-4f843a362268",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[90, 25, 73, 45, 32]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#deque\n",
+    "\n",
+    "l1 = c.deque([25,73,45,32,])\n",
+    "l1.appendleft(90)\n",
+    "list = []\n",
+    "for i in l1:\n",
+    "    list.append(i)\n",
+    "print(list)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "e2d3158a-5d93-4dfe-93f7-6c463571162c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ChainMap({1: 6, 2: 6, 3: 5}, {'yellow': 6, 'green': 6, 'red': 5})\n"
+     ]
+    }
+   ],
+   "source": [
+    "#chainmap\n",
+    "\n",
+    "d1 = {1:6, 2:6, 3:5}\n",
+    "d2 = {\"yellow\":6,\"green\":6,\"red\":5}\n",
+    "\n",
+    "ans = c.ChainMap(d1,d2)\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c61f33e8-e241-43d0-88f9-be4bee4a5fdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ans['yellow'])\n",
+    "print(ans[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ff35050c-d860-422c-9b6e-472fdb74344a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "append method restricted",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[38]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     11\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m result\n\u001b[32m     13\u001b[39m obj = Customlist([\u001b[32m3\u001b[39m,\u001b[32m2\u001b[39m,\u001b[32m6\u001b[39m,\u001b[32m5\u001b[39m,\u001b[32m4\u001b[39m])\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m \u001b[43mobj\u001b[49m\u001b[43m.\u001b[49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[38]\u001b[39m\u001b[32m, line 5\u001b[39m, in \u001b[36mCustomlist.append\u001b[39m\u001b[34m(self, a)\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mappend\u001b[39m(\u001b[38;5;28mself\u001b[39m, a = \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mappend method restricted\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mRuntimeError\u001b[39m: append method restricted"
+     ]
+    }
+   ],
+   "source": [
+    "#userlist\n",
+    "\n",
+    "class Customlist(c.UserList):\n",
+    "    def append(self, a = None):\n",
+    "        raise RuntimeError(\"append method restricted\")\n",
+    "\n",
+    "    def square(self):\n",
+    "        result = []\n",
+    "        for value in self:\n",
+    "            result.append(value*value)\n",
+    "        return result\n",
+    "\n",
+    "obj = Customlist([3,2,6,5,4])\n",
+    "obj.append()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "e3b86947-11b4-4138-a719-fa237f93c345",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 4, 36, 25, 16]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.square()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "c4d59694-538e-43d2-b988-3a772415feb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "pop method disabled",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[44]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     11\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msum\u001b[39m(result)\n\u001b[32m     14\u001b[39m obj = CustomDict({\u001b[33m'\u001b[39m\u001b[33myellow\u001b[39m\u001b[33m'\u001b[39m: \u001b[32m6\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mgreen\u001b[39m\u001b[33m'\u001b[39m: \u001b[32m6\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mred\u001b[39m\u001b[33m'\u001b[39m: \u001b[32m5\u001b[39m})\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m \u001b[43mobj\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[44]\u001b[39m\u001b[32m, line 5\u001b[39m, in \u001b[36mCustomDict.pop\u001b[39m\u001b[34m(self, a)\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mpop\u001b[39m(\u001b[38;5;28mself\u001b[39m, a = \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mpop method disabled\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mRuntimeError\u001b[39m: pop method disabled"
+     ]
+    }
+   ],
+   "source": [
+    "#userdict\n",
+    "\n",
+    "class CustomDict(c.UserDict):\n",
+    "    def pop(self, a = None):\n",
+    "        raise RuntimeError(\"pop method disabled\")\n",
+    "\n",
+    "    def totalsum(self):\n",
+    "        result = []\n",
+    "        for value in self:\n",
+    "            result.append(self[value])\n",
+    "        return sum(result)\n",
+    "\n",
+    "\n",
+    "obj = CustomDict({'yellow': 6, 'green': 6, 'red': 5})\n",
+    "obj.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "bae145c7-aaa3-4761-ba02-418bf63e9a26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.totalsum()"
+   ]
   }
  ],
  "metadata": {
